Add decode quality scoring tool and first full comparison report
Scoring tool: Java decode engine (DecodeQualityTest) + Python audio analysis
(audio_scorer.py) + shell orchestrator (score-decode-quality.sh). Measures
LDU counts, audio duration/segments, dispatch tone detection, distortion
events, and STT word counts (whisper) for A/B comparison across samples.

First report: 014-londonderry (51cb8d5e) vs pre-merge (aae1ebfe), 17 files.
Control wins LDUs by 0.5%, but test has 15.3% fewer distortion events and
comparable word counts. Known bug: RMS energy threshold broken for NAC=0.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>